@startuml

title __SERVICE's Class Diagram__\n

  namespace com.vrush.microservices.booking {
    namespace service {
      class com.vrush.microservices.booking.service.BookingService {
          {static} - log : Logger
          + BookingService()
          + addBookingState()
          + findById()
          + save()
          + sendEventBookingCreated()
          - enrichEntity()
          - getBookingDates()
          - getRoom()
          - verifyAvailability()
      }
    }
  }
  

  namespace com.vrush.microservices.booking {
    namespace service {
      class com.vrush.microservices.booking.service.RoomService {
          {static} - log : Logger
          + RoomService()
          + findById()
          + save()
      }
    }
  }
  

  com.vrush.microservices.booking.service.BookingService o-- com.vrush.microservices.booking.repositories.BookingDatesRepository : bookingDatesRepository
  com.vrush.microservices.booking.service.BookingService o-- com.vrush.microservices.booking.repositories.BookingStatesRepository : bookingStatesRepository
  com.vrush.microservices.booking.service.BookingService o-- com.vrush.microservices.booking.events.publishers.EventBookingCreatedPublisher : eventBookingCreatedPublisher
  com.vrush.microservices.booking.service.BookingService o-- com.vrush.microservices.booking.mappers.BookingMapper : mapper
  com.vrush.microservices.booking.service.BookingService o-- com.vrush.microservices.booking.repositories.BookingRepository : repository
  com.vrush.microservices.booking.service.BookingService o-- com.vrush.microservices.booking.service.RoomService : roomService
  com.vrush.microservices.booking.service.RoomService o-- com.vrush.microservices.booking.mappers.RoomMapper : mapper
  com.vrush.microservices.booking.service.RoomService o-- com.vrush.microservices.booking.repositories.RoomRepository : repository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
